--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -17,6 +17,7 @@
 /*
   Миксины
 */
+@import "./mixins/breadcrumbs";
 @import "./mixins/button-transparent";
 @import "./mixins/resort-card";
 @import "./mixins/house-card";
