--- a/src/views/components/icons.pug
+++ b/src/views/components/icons.pug
@@ -179,5 +179,8 @@ svg(style="display: none")
   symbol#svg-chevron-down
     <path d="M4 6L8 10L12 6" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 
+  symbol#svg-chevron-right
+    <path d="M6 12L10 8L6 4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+
   symbol#svg-arrows-size
     <path d="M10.5 7.5L15.75 2.25M15.75 2.25H11.25M15.75 2.25V6.75M7.5 10.5L2.25 15.75M2.25 15.75H6.75M2.25 15.75L2.25 11.25" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
