--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -91,6 +91,7 @@ html(lang="ru")
     include ../mixins/button-transparent
     include ../mixins/about-types-card
     include ../mixins/about-team-card
+    include ../mixins/reviews-service-rating
 
     include ../components/header
 
