--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -92,6 +92,8 @@ html(lang="ru")
     include ../mixins/about-types-card
     include ../mixins/about-team-card
     include ../mixins/reviews-service-rating
+    include ../mixins/reviews-clients-card
+    include ../mixins/reviews-clients-card2
 
     include ../components/header
 
