--- a/src/views/pages/reviews.pug
+++ b/src/views/pages/reviews.pug
@@ -22,3 +22,5 @@ block content
       ]
     )
     include ../components/reviews/reviews-hero
+    include ../components/reviews/reviews-clients
+    include ../components/reviews/reviews-popup
