--- a/src/assets/styles/base/variables.scss
+++ b/src/assets/styles/base/variables.scss
@@ -34,6 +34,7 @@ $cyan-400: #10A2EC;
 $blue-border: #386AE040;
 $blue-border-light: #2768C926;
 
+$blue-100: #F1F4F9;
 $blue-300: #0093DD;
 $blue-400: #4E78DA;
 $blue-500: #1F56D8;
