update reviews page

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -48,3 +48,7 @@
 @import "./components/reviews/reviews-hero";
 @import "./components/reviews/reviews-clients";
 @import "./components/reviews/reviews-popup";
+@import "./components/reviews/reviews-create-popup";
+@import "./components/reviews/reviews-pagination";
+@import "./components/reviews/stars-rating";
+@import "./components/reviews/reviews-media";
