--- a/src/assets/styles/utils/mixins.scss
+++ b/src/assets/styles/utils/mixins.scss
@@ -56,6 +56,12 @@
       @content;
     }
   }
+
+  @if $breakpoint == mobile-2x {
+    @media (max-width: 639px) {
+      @content;
+    }
+  }
 }
 
 // ______________________
