--- a/src/views/components/reviews/reviews-popup.pug
+++ b/src/views/components/reviews/reviews-popup.pug
@@ -10,7 +10,7 @@
         a(href="#") Yell
         svg(width="12" height="12" viewBox="0 0 12 12")
           use(xlink:href="#svg-share")
-    .reviews-popup__main
+    .reviews-popup__main(data-scroll-lock-scrollable)
       .reviews-popup__top
         .reviews-popup__info Анна Назарова <time datetime="2022-03-28"> - 28.03.2022</time>
         .reviews-popup__stars
