--- a/src/views/pages/reviews.pug
+++ b/src/views/pages/reviews.pug
@@ -24,3 +24,5 @@ block content
     include ../components/reviews/reviews-hero
     include ../components/reviews/reviews-clients
     include ../components/reviews/reviews-popup
+    include ../components/reviews/reviews-create-popup
+    include ../components/reviews/reviews-media
