--- a/src/views/components/reviews/reviews-clients.pug
+++ b/src/views/components/reviews/reviews-clients.pug
@@ -44,4 +44,4 @@ section.reviews-clients
             link: 'Google Maps'
           }
         )
-      include ./reviews-pagination
+      include ../pagination-huge
