--- a/src/views/components/reviews/reviews-media.pug
+++ b/src/views/components/reviews/reviews-media.pug
@@ -6,54 +6,56 @@ section.reviews-media
         .reviews-media__block
           .reviews-media__logo
             img(src="/assets/images/reviews/media/life.svg", alt="life")
-          h3.reviews-media__subtitle Туристический кэшбэк от Ростуризма возвращается уже с 18 января 2022
+          a.reviews-media__subtitle(href="#") Туристический кэшбэк от Ростуризма возвращается уже с 18 января 2022
           p.reviews-media__text У любителей путешествовать появилась уникальная возможность сэкономить деньги на отдыхе. Сервис онлайн бронирования санаториев и пансионатов Путевка.ком предлагает россиян...
           a.reviews-media__link(href="#") Читать статью
         .reviews-media__block
           .reviews-media__logo
             img(src="/assets/images/reviews/media/vedomosti.svg", alt="vedomosti")
-          h3.reviews-media__subtitle Как сэкономить 20% от стоимости тура с кэшбэком от Putevka.com
+          a.reviews-media__subtitle(href="#") Как сэкономить 20% от стоимости тура с кэшбэком от Putevka.com
           p.reviews-media__text Туристы, планирующие отдых в санаториях и пансионатах России, могут сэкономить до 20 000 рублей на стоимости своей путёвки. Для этого надо воспользоваться программой субсидирова...
           a.reviews-media__link(href="#") Читать статью
         .reviews-media__block
           .reviews-media__logo
             img(src="/assets/images/reviews/media/interfax.svg", alt="interfax")
-          h3.reviews-media__subtitle Туризм в Крыму: современные реалии и прогноз на 2017 год
+          a.reviews-media__subtitle(href="#") Туризм в Крыму: современные реалии и прогноз на 2017 год
           p.reviews-media__text Каким был 2016 год для Крыма, сбылись ли ожидания экспертов и какие прогнозы они дают на 2017 год? Об этом и не только в интервью независимому эксперту Игорю Иванову рассказ...
           a.reviews-media__link(href="#") Читать статью
         .reviews-media__block
           .reviews-media__logo
             img(src="/assets/images/reviews/media/tass.svg", alt="tass")
-          h3.reviews-media__subtitle Вернет ли себе Крым славу всенародной здравницы?
+          a.reviews-media__subtitle(href="#") Вернет ли себе Крым славу всенародной здравницы?
           p.reviews-media__text «Сегодня Крым является популярным направлением благодаря лечебно-оздоровительным свойствам его природы. Однако чтобы курорты принесли реальную пользу, необх...
           a.reviews-media__link(href="#") Читать статью
         .reviews-media__block
           .reviews-media__logo
             img(src="/assets/images/reviews/media/mk.svg", alt="mk")
-          h3.reviews-media__subtitle Простое решение сложной задачи
+          a.reviews-media__subtitle(href="#") Простое решение сложной задачи
           p.reviews-media__text Прошло всего несколько лет с тех пор, как для многих интернет заменил походы в магазины, салоны и мастерские. Сегодня интернет выступает огромным торговым центром, в котор...
           a.reviews-media__link(href="#") Читать статью
         .reviews-media__block
           .reviews-media__logo
             img(src="/assets/images/reviews/media/planet.png", alt="planet")
-          h3.reviews-media__subtitle Россияне выбирают Крым
+          a.reviews-media__subtitle(href="#") Россияне выбирают Крым
           p.reviews-media__text Чем в 2016 году отличился Крым, сколько туристов его посетили, какие тенденции в этом направлении и какие прогнозы на 2017 год? Ниже приведены ответы, взятые из отчета Алексея Кар...
           a.reviews-media__link(href="#") Читать статью
         .reviews-media__block
           .reviews-media__logo
             img(src="/assets/images/reviews/media/moscow.png", alt="moscow")
-          h3.reviews-media__subtitle Компания "Путевка.ком" запустила акцию для раннего бронирования
+          a.reviews-media__subtitle(href="#") Компания "Путевка.ком" запустила акцию для раннего бронирования
           p.reviews-media__text Каким был 2016 год для Крыма, сбылись ли ожидания экспертов и какие прогнозы они дают на 2017 год? Об этом и не только в интервью независимому эксперту Игорю Иванову рассказ...
           a.reviews-media__link(href="#") Читать статью
         .reviews-media__block
           .reviews-media__logo
             img(src="/assets/images/reviews/media/izvestia.svg", alt="izvestia")
-          h3.reviews-media__subtitle Туризм в Крыму: современные реалии и прогноз на 2017 год
+          a.reviews-media__subtitle(href="#") Туризм в Крыму: современные реалии и прогноз на 2017 год
           p.reviews-media__text У любителей путешествовать появилась уникальная возможность сэкономить деньги на отдыхе. Сервис онлайн бронирования санаториев и пансионатов Путевка.ком предлагает россиян...
           a.reviews-media__link(href="#") Читать статью
         .reviews-media__block
           .reviews-media__logo
             img(src="/assets/images/reviews/media/rbk.svg", alt="rbk")
-          h3.reviews-media__subtitle Как сэкономить 20% от стоимости тура с кэшбэком от Putevka.com
+          a.reviews-media__subtitle(href="#") Как сэкономить 20% от стоимости тура с кэшбэком от Putevka.com
           p.reviews-media__text Туристы, планирующие отдых в санаториях и пансионатах России, могут сэкономить до 20 000 рублей на стоимости своей путёвки. Для этого надо воспользоваться программой субсидирова...
           a.reviews-media__link(href="#") Читать статью
+
+      include ../pagination
