--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -49,6 +49,9 @@
 @import "./components/reviews/reviews-clients";
 @import "./components/reviews/reviews-popup";
 @import "./components/reviews/reviews-create-popup";
-@import "./components/reviews/reviews-pagination";
 @import "./components/reviews/stars-rating";
 @import "./components/reviews/reviews-media";
+
+@import "./components/pagination-huge";
+@import "./components/pagination";
+
