--- a/src/assets/styles/components/reviews/reviews-media.scss
+++ b/src/assets/styles/components/reviews/reviews-media.scss
@@ -21,34 +21,78 @@
   }
 
   &__block {
-    padding: 30px;
     border-radius: 10px;
     background-color: $white-100;
+    @include max-screen(tablet) {
+      padding: 24px;
+    }
+    @include min-screen(tablet-2x) {
+      padding: 30px;
+    }
+  }
+
+  &__logo {
+    @include max-screen(tablet) {
+      height: 30px;
+    }
+    @include min-screen(tablet-2x) {
+      height: 40px;
+    }
+    img {
+      height: 100%;
+      width: auto;
+    }
   }
 
   &__subtitle {
-    margin-top: 40px;
-    font-size: 18px;
+    display: inline-block;
     font-weight: 700;
-    line-height: 24px;
     color: $black-400;
+    @include max-screen(tablet) {
+      margin-top: 30px;
+      line-height: 18px;
+      font-size: 16px;
+    }
+    @include min-screen(tablet-2x) {
+      margin-top: 40px;
+      line-height: 24px;
+      font-size: 18px;
+    }
+    @include min-screen(laptop) {
+      transition: color $transition-default;
+      &:hover {
+        color: $orange-500;
+      }
+    }
   }
 
   &__text {
-    margin-top: 20px;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 20px;
     color: $black-300;
+    @include max-screen(tablet) {
+      margin-top: 16px;
+      font-size: 14px;
+      line-height: 16px;
+    }
+    @include min-screen(tablet-2x) {
+      margin-top: 20px;
+      font-size: 16px;
+      line-height: 20px;
+    }
   }
 
   &__link {
     display: inline-block;
-    margin-top: 30px;
-    font-size: 18px;
     font-weight: 500;
     line-height: 18px;
     color: $blue-500;
+    @include max-screen(tablet) {
+      margin-top: 24px;
+      font-size: 16px;
+    }
+    @include min-screen(tablet-2x) {
+      font-size: 18px;
+      margin-top: 30px;
+    }
     @include min-screen(laptop) {
       transition: color $transition-default;
       &:hover {
