--- a/src/views/components/reviews/reviews-hero.pug
+++ b/src/views/components/reviews/reviews-hero.pug
@@ -31,7 +31,7 @@ section.reviews-hero
             },
             star5: {
               src: '/assets/images/reviews/star.svg',
-              alt: 'star-part'
+              alt: 'star'
             },
             text: '472 отзыва'
           }
@@ -93,7 +93,7 @@ section.reviews-hero
             },
             star5: {
               src: '/assets/images/reviews/star.svg',
-              alt: 'star-part'
+              alt: 'star'
             },
             text: '179 отзывов'
           }
@@ -124,7 +124,7 @@ section.reviews-hero
             },
             star5: {
               src: '/assets/images/reviews/star.svg',
-              alt: 'star-part'
+              alt: 'star'
             },
             text: '53 отзыва'
           }
