--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -94,6 +94,7 @@ html(lang="ru")
     include ../mixins/reviews-service-rating
     include ../mixins/reviews-clients-card
     include ../mixins/reviews-clients-card-two
+    include ../mixins/attractions-types-card
 
     include ../components/header
 
