--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -87,7 +87,7 @@ html(lang="ru")
 
     include ../mixins/breadcrumbs
     include ../mixins/resort-card
-    include ../mixins/house-card
+    include ../mixins/sanatorium-card
     include ../mixins/button-transparent
     include ../mixins/about-types-card
     include ../mixins/about-team-card
@@ -95,6 +95,7 @@ html(lang="ru")
     include ../mixins/reviews-clients-card
     include ../mixins/reviews-clients-card-two
     include ../mixins/attractions-types-card
+    include ../mixins/excursion-card
 
     include ../components/header
 
