--- a/src/views/pages/attractions.pug
+++ b/src/views/pages/attractions.pug
@@ -23,3 +23,6 @@ block content
     )
     include ../components/attractions/attractions-hero
     include ../components/attractions/attractions-types
+    include ../components/attractions/attractions-sanatorium
+    include ../components/attractions/attractions-excursion
+    include ../components/attractions/attractions-map
