--- a/src/assets/styles/mixins/attractions-types-card.scss
+++ b/src/assets/styles/mixins/attractions-types-card.scss
@@ -6,14 +6,15 @@
 
 
   &__img {
-    height: 280px;
     position: relative;
     padding: 16px;
     display: flex;
     align-items: flex-end;
     @include max-screen(tablet) {
+      height: 215px;
     }
     @include min-screen(tablet-2x) {
+      height: 280px;
     }
     img {
       height: 100%;
@@ -56,12 +57,19 @@
   &__title {
     position: relative;
     z-index: 1;
-
-    font-size: 24px;
-    font-weight: 700;
-    line-height: 26px;
     a {
       color: $white;
+      font-family: 'Panton';
+      @include max-screen(tablet) {
+        font-size: 18px;
+        font-weight: 900;
+        line-height: 20px;
+      }
+      @include min-screen(tablet-2x) {
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 26px;
+      }
       &:active {
         color: $orange-500;
       }
@@ -75,7 +83,12 @@
   }
 
   &__content {
-    padding: 20px 16px 16px 16px;
+    @include max-screen(tablet) {
+      padding: 16px;
+    }
+    @include min-screen(tablet-2x) {
+      padding: 20px 16px 16px 16px;
+    }
   }
 
   &__location {
@@ -95,7 +108,6 @@
 
   &__text {
     color: $black-300;
-    margin-top: 16px;
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
@@ -103,22 +115,38 @@
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    @include max-screen(tablet) {
+      margin-top: 12px;
+    }
+    @include min-screen(tablet-2x) {
+      margin-top: 16px;
+    }
   }
 
   &__buttons {
-    margin-top: 24px;
     display: flex;
     gap: 10px;
+    @include max-screen(tablet) {
+      margin-top: 20px;
+    }
+    @include min-screen(tablet-2x) {
+      margin-top: 24px;
+    }
   }
 
   &__button {
-    padding: 11px 20px;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 6px;
     width: 100%;
     border-radius: 6px;
+    @include max-screen(tablet) {
+      padding: 9px 20px;
+    }
+    @include min-screen(tablet-2x) {
+      padding: 11px 20px;
+    }
     span {
       font-size: 16px;
       font-weight: 800;
