--- a/src/views/components/attractions/attractions-types.pug
+++ b/src/views/components/attractions/attractions-types.pug
@@ -111,3 +111,5 @@ section.attractions-types
             svg(width="18" height="18" viewBox="0 0 18 18")
               use(xlink:href="#svg-car-default")
             span Трансферы/такси
+      include ../pagination-huge
+      
