--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -61,3 +61,4 @@
 @import "./components/attractions/attractions-types";
 @import "./components/attractions/attractions-sanatorium";
 @import "./components/attractions/attractions-excursion";
+@import "./components/attractions/attractions-map";
