--- a/src/assets/styles/components/attractions/attractions-map.scss
+++ b/src/assets/styles/components/attractions/attractions-map.scss
@@ -1,3 +1,68 @@
 .attractions-map {
-  
+  @include max-screen(tablet) {
+    padding-top: 30px;
+    padding-bottom: 40px;
+  }
+  @include min-screen(tablet-2x) {
+    padding-top: 35px;
+    padding-bottom: 100px;
+  }
+
+  &__tabs {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 16px;
+    @include max-screen(tablet) {
+      margin-top: 24px;
+      column-gap: 20px;
+    }
+    @include min-screen(tablet-2x) {
+      margin-top: 30px;
+      column-gap: 24px;
+    }
+    span {
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 24px;
+      color: $gray-400;
+      @include max-screen(tablet) {
+        display: none;
+      }
+      @include min-screen(tablet-2x) {
+        display: block;
+      }
+    }
+  }
+
+  &__tab {
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 16px;
+    color: $blue-500;
+    &:active {
+      color: $orange-500;
+    }
+    @include min-screen(laptop) {
+      padding: 4px 0;
+      transition: color $transition-default;
+      &:hover {
+        color: $orange-500;
+      }
+    }
+  }
+  .ymap-container {
+    width: 100%;
+    @include max-screen(tablet) {
+      margin-top: 24px;
+      height: 400px;
+    }
+    @include min-screen(tablet-2x) {
+      margin-top: 30px;
+      height: 450px;
+    }
+    #map-yandex {
+      height: 100%;
+      width: 100%;
+    }
+  }
 }
